--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -44,3 +44,19 @@ code {
 .markdown h1:first-child {
   --ifm-h1-font-size: 2.4rem;
 }
+
+.hero__title {
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 576px) {
+  .hero__title {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and ((min-width: 576px) and (max-width: 996px)) {
+  .hero__title {
+    font-size: 2.5rem;
+  }
+}
