--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -24,6 +24,7 @@
   --ifm-heading-font-family: 'Inclusive Sans', 'Open Sans', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --ifm-font-size-base: 1rem;
   --ifm-code-font-size: 88%;
+  --ifm-heading-font-weight: 400;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -48,6 +49,7 @@ code {
 
 .hero__title {
   margin-bottom: 0;
+  font-weight: 700;
 }
 
 @media screen and (max-width: 576px) {
