--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -47,13 +47,27 @@ code {
   --ifm-h1-font-size: 2.4rem;
 }
 
-.hero__title {
+.hero__subtitle {
   margin-bottom: 0;
-  font-weight: 700;
+  white-space: normal;
 }
 
-@media screen and (max-width: 576px) {
+@media screen and ((max-width: 576px) and (min-width: 280px)) {
   .hero__title {
     font-size: calc(9vw);
+  }
+
+  .hero__subtitle {
+    font-size: calc(4vw);
+  }
+}
+
+@media screen and (max-width: 280px) {
+  .hero__title {
+    font-size: calc(8vw);
+  }
+
+  .hero__subtitle {
+    font-size: 0.8rem;
   }
 }
