--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -25,6 +25,7 @@
   --ifm-font-size-base: 1rem;
   --ifm-code-font-size: 88%;
   --ifm-heading-font-weight: 600;
+  --ifm-heading-line-height: 1.1;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
