--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,7 +16,7 @@
   --ifm-color-primary-lighter: #ff8c78;
   --ifm-color-primary-lightest: #ffb6a9;
   --ifm-code-font-size: 80%;
-  --docusaurus-highlighted-code-line-bg: rgba(255, 236, 139, 1);
+  --docusaurus-highlighted-code-line-bg: rgb(240, 240, 214);
 
   --ifm-font-family-base: 'Open Sans', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --ifm-font-family-monospace: 'JetBrains Mono', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
